build/generated-src/antlr/main/comp2024/grammar/JavammParser.java
// Generated from comp2024/grammar/Javamm.g4 by ANTLR 4.5.3

    package pt.up.fe.comp2024;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JavammParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		EQUALS=1, SEMI=2, LCURLY=3, RCURLY=4, LPAREN=5, RPAREN=6, LSTRPAREN=7, 
		RSTRPAREN=8, MUL=9, ADD=10, SUB=11, LT=12, DIV=13, AND=14, DOT=15, DOT3=16, 
		COMMA=17, NOT=18, CLASS=19, INT=20, PUBLIC=21, BOOL=22, RETURN=23, IMPORT=24, 
		EXTENDS=25, STATIC=26, VOID=27, MAIN=28, STRING=29, IF=30, ELSE=31, WHILE=32, 
		LENGTH=33, NEW=34, TRUE=35, FALSE=36, THIS=37, INTEGER=38, ID=39, WS=40, 
		MULTI_LINE_COMMENT=41, SINGLE_LINE_COMMENT=42;
	public static final int
		RULE_program = 0, RULE_importDecl = 1, RULE_classDecl = 2, RULE_varDecl = 3, 
		RULE_type = 4, RULE_methodDecl = 5, RULE_mainMethod = 6, RULE_param = 7, 
		RULE_stmt = 8, RULE_expr = 9;
	public static final String[] ruleNames = {
		"program", "importDecl", "classDecl", "varDecl", "type", "methodDecl", 
		"mainMethod", "param", "stmt", "expr"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'='", "';'", "'{'", "'}'", "'('", "')'", "'['", "']'", "'*'", "'+'", 
		"'-'", "'<'", "'/'", "'&&'", "'.'", "'...'", "','", "'!'", "'class'", 
		"'int'", "'public'", "'boolean'", "'return'", "'import'", "'extends'", 
		"'static'", "'void'", "'main'", "'String'", "'if'", "'else'", "'while'", 
		"'length'", "'new'", "'true'", "'false'", "'this'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "EQUALS", "SEMI", "LCURLY", "RCURLY", "LPAREN", "RPAREN", "LSTRPAREN", 
		"RSTRPAREN", "MUL", "ADD", "SUB", "LT", "DIV", "AND", "DOT", "DOT3", "COMMA", 
		"NOT", "CLASS", "INT", "PUBLIC", "BOOL", "RETURN", "IMPORT", "EXTENDS", 
		"STATIC", "VOID", "MAIN", "STRING", "IF", "ELSE", "WHILE", "LENGTH", "NEW", 
		"TRUE", "FALSE", "THIS", "INTEGER", "ID", "WS", "MULTI_LINE_COMMENT", 
		"SINGLE_LINE_COMMENT"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Javamm.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JavammParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public ClassDeclContext classDecl() {
			return getRuleContext(ClassDeclContext.class,0);
		}
		public TerminalNode EOF() { return getToken(JavammParser.EOF, 0); }
		public List<ImportDeclContext> importDecl() {
			return getRuleContexts(ImportDeclContext.class);
		}
		public ImportDeclContext importDecl(int i) {
			return getRuleContext(ImportDeclContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavammListener ) ((JavammListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavammListener ) ((JavammListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(23);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IMPORT) {
				{
				{
				setState(20);
				importDecl();
				}
				}
				setState(25);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(26);
			classDecl();
			setState(27);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportDeclContext extends ParserRuleContext {
		public Token ID;
		public List<Token> value = new ArrayList<Token>();
		public Token MAIN;
		public Token STRING;
		public Token LENGTH;
		public Token _tset377;
		public Token _tset392;
		public TerminalNode IMPORT() { return getToken(JavammParser.IMPORT, 0); }
		public TerminalNode SEMI() { return getToken(JavammParser.SEMI, 0); }
		public List<TerminalNode> ID() { return getTokens(JavammParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(JavammParser.ID, i);
		}
		public List<TerminalNode> MAIN() { return getTokens(JavammParser.MAIN); }
		public TerminalNode MAIN(int i) {
			return getToken(JavammParser.MAIN, i);
		}
		public List<TerminalNode> STRING() { return getTokens(JavammParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(JavammParser.STRING, i);
		}
		public List<TerminalNode> LENGTH() { return getTokens(JavammParser.LENGTH); }
		public TerminalNode LENGTH(int i) {
			return getToken(JavammParser.LENGTH, i);
		}
		public List<TerminalNode> DOT() { return getTokens(JavammParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(JavammParser.DOT, i);
		}
		public ImportDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavammListener ) ((JavammListener)listener).enterImportDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavammListener ) ((JavammListener)listener).exitImportDecl(this);
		}
	}

	public final ImportDeclContext importDecl() throws RecognitionException {
		ImportDeclContext _localctx = new ImportDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_importDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(29);
			match(IMPORT);
			setState(30);
			((ImportDeclContext)_localctx)._tset377 = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MAIN) | (1L << STRING) | (1L << LENGTH) | (1L << ID))) != 0)) ) {
				((ImportDeclContext)_localctx)._tset377 = (Token)_errHandler.recoverInline(this);
			} else {
				consume();
			}
			((ImportDeclContext)_localctx).value.add(((ImportDeclContext)_localctx)._tset377);
			setState(35);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==DOT) {
				{
				{
				setState(31);
				match(DOT);
				setState(32);
				((ImportDeclContext)_localctx)._tset392 = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MAIN) | (1L << STRING) | (1L << LENGTH) | (1L << ID))) != 0)) ) {
					((ImportDeclContext)_localctx)._tset392 = (Token)_errHandler.recoverInline(this);
				} else {
					consume();
				}
				((ImportDeclContext)_localctx).value.add(((ImportDeclContext)_localctx)._tset392);
				}
				}
				setState(37);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(38);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDeclContext extends ParserRuleContext {
		public Token className;
		public Token superclassName;
		public TerminalNode CLASS() { return getToken(JavammParser.CLASS, 0); }
		public TerminalNode LCURLY() { return getToken(JavammParser.LCURLY, 0); }
		public TerminalNode RCURLY() { return getToken(JavammParser.RCURLY, 0); }
		public List<TerminalNode> ID() { return getTokens(JavammParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(JavammParser.ID, i);
		}
		public List<TerminalNode> MAIN() { return getTokens(JavammParser.MAIN); }
		public TerminalNode MAIN(int i) {
			return getToken(JavammParser.MAIN, i);
		}
		public List<TerminalNode> STRING() { return getTokens(JavammParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(JavammParser.STRING, i);
		}
		public List<TerminalNode> LENGTH() { return getTokens(JavammParser.LENGTH); }
		public TerminalNode LENGTH(int i) {
			return getToken(JavammParser.LENGTH, i);
		}
		public TerminalNode EXTENDS() { return getToken(JavammParser.EXTENDS, 0); }
		public List<VarDeclContext> varDecl() {
			return getRuleContexts(VarDeclContext.class);
		}
		public VarDeclContext varDecl(int i) {
			return getRuleContext(VarDeclContext.class,i);
		}
		public List<MethodDeclContext> methodDecl() {
			return getRuleContexts(MethodDeclContext.class);
		}
		public MethodDeclContext methodDecl(int i) {
			return getRuleContext(MethodDeclContext.class,i);
		}
		public ClassDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavammListener ) ((JavammListener)listener).enterClassDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavammListener ) ((JavammListener)listener).exitClassDecl(this);
		}
	}

	public final ClassDeclContext classDecl() throws RecognitionException {
		ClassDeclContext _localctx = new ClassDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classDecl);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			match(CLASS);
			setState(41);
			((ClassDeclContext)_localctx).className = _input.LT(1);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MAIN) | (1L << STRING) | (1L << LENGTH) | (1L << ID))) != 0)) ) {
				((ClassDeclContext)_localctx).className = (Token)_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(44);
			_la = _input.LA(1);
			if (_la==EXTENDS) {
				{
				setState(42);
				match(EXTENDS);
				setState(43);
				((ClassDeclContext)_localctx).superclassName = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MAIN) | (1L << STRING) | (1L << LENGTH) | (1L << ID))) != 0)) ) {
					((ClassDeclContext)_localctx).superclassName = (Token)_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
			}

			setState(46);
			match(LCURLY);
			setState(50);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(47);
					varDecl();
					}
					} 
				}
				setState(52);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(56);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << PUBLIC) | (1L << BOOL) | (1L << STATIC) | (1L << MAIN) | (1L << STRING) | (1L << LENGTH) | (1L << ID))) != 0)) {
				{
				{
				setState(53);
				methodDecl();
				}
				}
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(59);
			match(RCURLY);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclContext extends ParserRuleContext {
		public Token name;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(JavammParser.SEMI, 0); }
		public List<TerminalNode> ID() { return getTokens(JavammParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(JavammParser.ID, i);
		}
		public List<TerminalNode> MAIN() { return getTokens(JavammParser.MAIN); }
		public TerminalNode MAIN(int i) {
			return getToken(JavammParser.MAIN, i);
		}
		public List<TerminalNode> STRING() { return getTokens(JavammParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(JavammParser.STRING, i);
		}
		public List<TerminalNode> LENGTH() { return getTokens(JavammParser.LENGTH); }
		public TerminalNode LENGTH(int i) {
			return getToken(JavammParser.LENGTH, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(JavammParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(JavammParser.COMMA, i);
		}
		public VarDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavammListener ) ((JavammListener)listener).enterVarDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavammListener ) ((JavammListener)listener).exitVarDecl(this);
		}
	}

	public final VarDeclContext varDecl() throws RecognitionException {
		VarDeclContext _localctx = new VarDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_varDecl);
		int _la;
		try {
			setState(75);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(61);
				type();
				setState(62);
				((VarDeclContext)_localctx).name = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MAIN) | (1L << STRING) | (1L << LENGTH) | (1L << ID))) != 0)) ) {
					((VarDeclContext)_localctx).name = (Token)_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(63);
					match(COMMA);
					setState(64);
					((VarDeclContext)_localctx).name = _input.LT(1);
					_la = _input.LA(1);
					if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MAIN) | (1L << STRING) | (1L << LENGTH) | (1L << ID))) != 0)) ) {
						((VarDeclContext)_localctx).name = (Token)_errHandler.recoverInline(this);
					} else {
						consume();
					}
					}
					}
					setState(69);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(70);
				match(SEMI);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				match(STRING);
				setState(73);
				((VarDeclContext)_localctx).name = match(ID);
				setState(74);
				match(SEMI);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public boolean isArray = false;
		public boolean isVarArgs = false;
		public Token name;
		public TerminalNode INT() { return getToken(JavammParser.INT, 0); }
		public TerminalNode LSTRPAREN() { return getToken(JavammParser.LSTRPAREN, 0); }
		public TerminalNode RSTRPAREN() { return getToken(JavammParser.RSTRPAREN, 0); }
		public TerminalNode STRING() { return getToken(JavammParser.STRING, 0); }
		public TerminalNode DOT3() { return getToken(JavammParser.DOT3, 0); }
		public TerminalNode BOOL() { return getToken(JavammParser.BOOL, 0); }
		public TerminalNode ID() { return getToken(JavammParser.ID, 0); }
		public TerminalNode MAIN() { return getToken(JavammParser.MAIN, 0); }
		public TerminalNode LENGTH() { return getToken(JavammParser.LENGTH, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavammListener ) ((JavammListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavammListener ) ((JavammListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_type);
		int _la;
		try {
			setState(92);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				((TypeContext)_localctx).name = match(INT);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				((TypeContext)_localctx).isArray = true;
				setState(79);
				((TypeContext)_localctx).name = match(INT);
				setState(80);
				match(LSTRPAREN);
				setState(81);
				match(RSTRPAREN);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				((TypeContext)_localctx).isArray = true;
				setState(83);
				((TypeContext)_localctx).name = match(STRING);
				setState(84);
				match(LSTRPAREN);
				setState(85);
				match(RSTRPAREN);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				((TypeContext)_localctx).isArray =  true; ((TypeContext)_localctx).isVarArgs = true;
				setState(87);
				((TypeContext)_localctx).name = match(INT);
				setState(88);
				match(DOT3);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(89);
				((TypeContext)_localctx).name = match(BOOL);
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(90);
				((TypeContext)_localctx).name = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MAIN) | (1L << STRING) | (1L << LENGTH) | (1L << ID))) != 0)) ) {
					((TypeContext)_localctx).name = (Token)_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(91);
				((TypeContext)_localctx).name = match(STRING);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodDeclContext extends ParserRuleContext {
		public boolean isPublic = false;
		public boolean isMainMethod = false;
		public Token name;
		public Token name_pars;
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(JavammParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(JavammParser.RPAREN, 0); }
		public TerminalNode LCURLY() { return getToken(JavammParser.LCURLY, 0); }
		public TerminalNode RETURN() { return getToken(JavammParser.RETURN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(JavammParser.SEMI, 0); }
		public TerminalNode RCURLY() { return getToken(JavammParser.RCURLY, 0); }
		public TerminalNode ID() { return getToken(JavammParser.ID, 0); }
		public List<TerminalNode> MAIN() { return getTokens(JavammParser.MAIN); }
		public TerminalNode MAIN(int i) {
			return getToken(JavammParser.MAIN, i);
		}
		public List<TerminalNode> STRING() { return getTokens(JavammParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(JavammParser.STRING, i);
		}
		public TerminalNode LENGTH() { return getToken(JavammParser.LENGTH, 0); }
		public TerminalNode PUBLIC() { return getToken(JavammParser.PUBLIC, 0); }
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public List<VarDeclContext> varDecl() {
			return getRuleContexts(VarDeclContext.class);
		}
		public VarDeclContext varDecl(int i) {
			return getRuleContext(VarDeclContext.class,i);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(JavammParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(JavammParser.COMMA, i);
		}
		public TerminalNode STATIC() { return getToken(JavammParser.STATIC, 0); }
		public TerminalNode VOID() { return getToken(JavammParser.VOID, 0); }
		public TerminalNode LSTRPAREN() { return getToken(JavammParser.LSTRPAREN, 0); }
		public TerminalNode RSTRPAREN() { return getToken(JavammParser.RSTRPAREN, 0); }
		public MethodDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JavammListener ) ((JavammListener)listener).enterMethodDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JavammListener ) ((JavammListener)listener).exitMethodDecl(this);
		}
	}

	public final MethodDeclContext methodDecl() throws RecognitionException {
		MethodDeclContext _localctx = new MethodDeclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_methodDecl);
		int _la;
		try {
			int _alt;
			setState(158);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				_la = _input.LA(1);
				if (_la==PUBLIC) {
					{
					setState(94);
					match(PUBLIC);
					((MethodDeclContext)_localctx).isPublic = true;
					}
				}

				setState(98);
				type();
				setState(99);
				((MethodDeclContext)_localctx).name = _input.LT(1);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MAIN) | (1L << STRING) | (1L << LENGTH) | (1L << ID))) != 0)) ) {
					((MethodDeclContext)_localctx).name = (Token)_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(100);
				match(LPAREN);
				setState(109);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << INT) | (1L << BOOL) | (1L << MAIN) | (1L << STRING) | (1L << LENGTH) | (1L << ID))) != 0)) {
					{
					setState(101);
					param();
					setState(106);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COMMA) {
						{
						{
						setState(102);
						match(COMMA);
						setState(103);
						param();
						}
						}
						setState(108);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}

				setState(111);
				match(RPAREN);
				setState(112);
				match(LCURLY);
				setState(116);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(113);
						varDecl();
						}
						} 
					}
					setState(118);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,11,_ctx);
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LCURLY) | (1L << LPAREN) | (1L << LSTRPAREN) | (1L << NOT) | (1L << MAIN) | (1L << STRING) | (1L << IF) | (1L << WHILE) | (1L << LENGTH) | (1L << NEW) | (1L << TRUE) | (1L << FALSE) | (1L << THIS) | (1L << INTEGER) | (1L << ID))) != 0)) {
					{
					{
					setState(119);
					stmt();
					}
					}
					setState(124);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(125);
				match(RETURN);
				setState(126);
				expr(0);
				setState(127);
				match(SEMI);
				setState(128);
				match(RCURLY);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(132);
				_la = _input.LA(1);
				if (_la==PUBLIC) {
					{
					setState(130);
					match(PUBLIC);
					((MethodDeclContext)_localctx).isPublic = true;
					}
				}
